--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
   <div class="container">
-    <div class="item header">Header</div>
-    <div class="item item--box-1">Small Box 1</div>
-    <div class="item item--box-2">Small Box 2</div>
-    <div class="item item--box-3">Small Box 3</div>
-    <div class="item content">Main Content</div>
-    <div class="item sidebar">Sidebar</div>
-    <div class="item footer">Footer</div>
+    <div class="item item--1">Modern</div>
+    <div class="item item--2">Css</div>
+    <div class="item item--3">with</div>
+    <div class="item item--4">Flexbox</div>
+    <div class="item item--5">and</div>
+    <div class="item item--6">Grid</div>
+    <div class="item item--7">is</div>
+    <div class="item item--8">great</div>
   </div>
 </body>
 </html>
