--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="item item--5">and</div>
     <div class="item item--6">Grid</div>
     <div class="item item--7">is</div>
-    <div class="item item--8">great</div>
+    <div class="item item--8">great, amazing and awesome to work with</div>
   </div>
 </body>
 </html>
